--- a/public/style/css.css
+++ b/public/style/css.css
@@ -58,7 +58,7 @@ a:hover {
 /*    color: #FB667A;*/
     /* color:#9E9E9E;*/
     color:purple;
-    background-color: #222;
+    background-color: white;
     background-position: center;
     text-align: center;
     font-size: 18px;
