--- a/public/style/css.css
+++ b/public/style/css.css
@@ -56,9 +56,8 @@ a:hover {
 
 #main2 {
 /*    color: #FB667A;*/
-    /* color:#9E9E9E;*/
-    color:purple;
-    background-color: white;
+  color:#9E9E9E;
+    background-color: #222;
     background-position: center;
     text-align: center;
     font-size: 18px;
