--- a/public/style/css.css
+++ b/public/style/css.css
@@ -57,7 +57,7 @@ a:hover {
 #main2 {
 /*    color: #FB667A;*/
   color:#9E9E9E;
-    background-color: #222;
+    background-color: gray;
     background-position: center;
     text-align: center;
     font-size: 18px;
