--- a/public/style/css.css
+++ b/public/style/css.css
@@ -108,10 +108,18 @@ span{
     position: relative;
 }
 
-
+.checking-div
+{
+    background-color: whitesmoke;
+   color: #333;
+    border: 0px solid pink;
+    border-radius: 10px;
+/*    width: 50%;*/
+}
 #check {
-    color:#9E9E9E;
-    background-color: #222;
+    font-weight: 600;
+    color:#333;
+    background-color: whitesmoke;
     background-position: center;
     text-align: center;
     font-size: 20px;
@@ -121,7 +129,9 @@ span{
     /*    height: 35em;*/
     height: auto;
     text-align: center;
-    padding-top: 5%;
+    padding-top: 1%;
+    border-bottom: 2px solid #555;
+    border-top: 2px solid #555;
 }
 
 #stores {
@@ -181,15 +191,17 @@ span.glyphicon-align-justify {
     border-bottom: 2px solid green;
     font-family: MONOFUR;
     font-size: 25px;
-    height: 40px;
+    height: 50px;
     width: 250px;
     border-top: none;
     border-left: none;
     border-right: none;
     border-bottom: 2px solid pink;
+    border-radius: 5px;
     background: #222;
     text-align: center;
     margin-bottom: 2%;
+    
     /*    box-shadow: -1px -1px 5px black*/
     /*    text-transform: uppercase;*/
 }
