--- a/public/style/css.css
+++ b/public/style/css.css
@@ -111,29 +111,26 @@ span{
 .checking-div
 {
     background-color: whitesmoke;
-   color: #333;
-    border: 0px solid pink;
-    border-radius: 10px;
-/*    width: 50%;*/
+   
 }
 #check {
+  
     font-weight: 600;
     color:#333;
     background-color: whitesmoke;
-    background-position: center;
     text-align: center;
     font-size: 20px;
-    background-attachment: fixed;
-    background-size: cover;
     width: 100%;
     /*    height: 35em;*/
     height: auto;
     text-align: center;
-    padding-top: 1%;
-    border-bottom: 2px solid #555;
-    border-top: 2px solid #555;
+    padding-top: 5%;
+    padding-bottom: 5%;
+   
 }
-
+#secdiv{
+    background-color: whitesmoke;
+}
 #stores {
     color: #666;
     background-color: whitesmoke;
