--- a/public/style/css.css
+++ b/public/style/css.css
@@ -344,6 +344,7 @@ h2 {
     margin-top: 15px;
     margin-bottom: 20px;
     float: none px auto;
+    color:whitesmoke;
 /*    box-shadow: -5px -5px 10px black;*/
 }
 #viewdata:hover{
